--- a/Resources/views/Chartjs/radar-analytics.html.twig
+++ b/Resources/views/Chartjs/radar-analytics.html.twig
@@ -21,5 +21,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {% include "CPASimUSanteChartjsBundle:Chartjs:chartjs.js.twig' %}
+    {% include "CPASimUSanteExoverrideBundle:Chartjs:chartjs.js.twig" %}
 {% endblock %}
