--- a/Resources/views/Widget/statWidgetDisplay.html.twig
+++ b/Resources/views/Widget/statWidgetDisplay.html.twig
@@ -1,1 +1,2 @@
-Some Stat
+{% include "CPASimUSanteExoverrideBundle:Chartjs:show.html.twig" %}
+{% include "CPASimUSanteExoverrideBundle:Chartjs:chartjs.js.twig" %}
