--- a/Resources/views/Chartjs/show.html.twig
+++ b/Resources/views/Chartjs/show.html.twig
@@ -1,1 +1,1 @@
-<canvas id="canvas-radar" class="radaranalytics"></canvas>
+<canvas id="canvas-radar" class="radaranalytics" style="width:300px;height: 300px"></canvas>
