--- a/Resources/views/Widget/statWidgetConfigure.html.twig
+++ b/Resources/views/Widget/statWidgetConfigure.html.twig
@@ -1,1 +1,18 @@
-Some Stat configuration
+{% form_theme form 'ClarolineCoreBundle::form_theme_no_label.html.twig' %}
+{# {{ path('cpasimusante_statwidget_config', {'widget': widgetInstance.getId()}) }}#}
+<form role="form"
+      class="form-horizontal"
+      action="#"
+      method="post"
+      novalidate
+        >
+    <div class="panel-body">
+        {{ form_widget(form) | replace('/id=[^"]*"', '') | raw }}
+    </div>
+    <div class="panel-footer">
+        <button type="submit" class="btn btn-primary">{{ 'ok'|trans({}, 'platform') }}</button>
+        <a href="#">
+            <button type="button" class="btn btn-default claro-widget-form-cancel">{{ 'cancel'|trans({}, 'platform') }}</button>
+        </a>
+    </div>
+</form>
