--- a/Resources/views/Paper/showStats.html.twig
+++ b/Resources/views/Paper/showStats.html.twig
@@ -29,7 +29,7 @@
             <i class="fa fa-arrow-left"></i> {{ 'back' | trans }}
         </a>
         <hr>
-
+        <h1>{{ exercise }}</h1>
         <table class="table table-striped table-bordered table-condensed exo-results-all">
             <thead>
                 <tr><th>User</th><th>n° copie</th><th>Start</th><th>End</th><th>Interrompu</th><th>Score</th></tr>
@@ -43,11 +43,12 @@
                         {# Begin response #}
                         <table class="table table-bordered table-condensed">
                             <thead>
-                            <tr><th>Réponse</th><th>Note</th><th>Nombre d'essai</th></tr>
+                            <tr><th>Question</th><th>Réponse</th><th>Note</th><th>Nombre d'essai</th></tr>
                             </thead>
                             <tbody>
                             {% for response in results2[paperid] %}
                                 <tr>
+                                    <td>{{ response[3] }}</td>
                                     <td>
                                         {% for choice in response[0] %}
                                             {{ choice }},
