--- a/Resources/views/Chartjs/show.html.twig
+++ b/Resources/views/Chartjs/show.html.twig
@@ -1,4 +1,4 @@
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('bundles/cpasimusanteexoverride/css/chartjs.css') }}">
 {% endblock %}
-<canvas id="canvas-radar" class="radaranalytics"></canvas>
+<canvas id="radaranalytics" height="350" width="300"></canvas>
