--- a/Resources/public/css/chartjs.css
+++ b/Resources/public/css/chartjs.css
@@ -1,1 +1,1 @@
-/*.radaranalytics {width:450px !important;height: 450px !important}*/
+.radaranalytics {width:450px !important;height: 450px !important}
