--- a/Resources/views/Paper/index.html.twig
+++ b/Resources/views/Paper/index.html.twig
@@ -46,9 +46,17 @@
                  class="btn btn-primary">
                   {{ 'export_csv_all_results' | trans({}, 'messages') }}
               </a>
-            <a href="{{ path('ujm_paper_export_all_results', { }) }}"
+            <a href="{{ path('ujm_paper_show_all_results', { }) }}"
                class="btn btn-primary">
-                {{ 'export_csv_all_results2' | trans({}, 'messages') }}
+                {{ 'Xhtml' | trans({}, 'messages') }}
+            </a>
+            <a href="{{ path('ujm_paper_export_test_json', { }) }}"
+               class="btn btn-primary">
+                {{ 'Xjson' | trans({}, 'messages') }}
+            </a>
+            <a href="{{ path('ujm_paper_export_all_results_cvs', { }) }}"
+               class="btn btn-primary">
+                {{ 'Xcsv' | trans({}, 'messages') }}
             </a>
             {% if _resource.published == FALSE %}
                 <a href="{{ path('ujm_exercise_delete_all_paper', { 'id': exoID }) }}"
