--- a/Resources/views/Paper/testJson.html.twig
+++ b/Resources/views/Paper/testJson.html.twig
@@ -8,7 +8,8 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <link href="{{ asset('bundles/ujmexo/css/tableLayout.css') }}" type="text/css" rel="stylesheet"/>
+    <link href="{{ asset('bundles/ujmexo/css/tableLayout.css') }}" type="text/css" rel="stylesheet"
+          xmlns="http://www.w3.org/1999/html"/>
 {% endblock %}
 
 {% block title %} {{ 'paper_list' | trans }} {% endblock %}
@@ -20,12 +21,18 @@
     </div>
 
     <div class="panel-body">
-        <span id="showcsv">SHOW</span>
+        <span id="showcsv">SHOW</span><a id="exportCanvas">Export</a>
         <div id="csvdata"></div>
         <script src="{{ asset('bundles/cpasimusantechartjs/js/Chart.min.js') | raw }}"></script>
         <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('bundles/cpasimusanteexoverride/css/chartjs.css') }}">
-        <canvas id="radaranalytics" height="350" width="300"></canvas>
-        <script>
+        <canvas id="radaranalytics" height="350" width="300" crossOrigin="Anonymous"></canvas>
+        <form id="send2base46"><input type="hidden" name="img64" id="img64" />
+        <input type="submit"></form>
+        <style>
+            #radaranalytics{background-color:#f0f0f0!important;}
+            .radarlegend{background-color:blue!important;}
+        </style>
+<script>
             var radarChartData = {};
 
             $(document).ready(function() {
@@ -39,59 +46,51 @@
                         success: function(response) {
                             radarChartData = response;
                             setRadarChart(radarChartData);
-
-console.log('success');
-console.log(response);
-console.log(radarChartData);
                         },
                         error: function(jqXHR, textStatus, errorThrown) {
-console.log(response);
                         }
                     });
-console.log('outside');
-console.log(radarChartData);
                     $('#csvdata').html("BLABLA");
                 });
 
-                function setRadarChart(radarChartData) {
-console.log('inside');
-                // legend for Chart
-                var legend = "<ul style=\"list-style-type:none;\">";
-                radarChartData.datasets.forEach(function (dataset) {
-                    legend += "<li><div style=\"background-color:" + dataset.strokeColor + ";height:0.5em;width:0.5em;float:left;margin-top:0.5em;margin-right:0.5em;\"></div><span style='font-family:Verdana;font-size: 12px;'>";
-                    if (dataset.label) {
-                        legend += dataset.label
-                    }
-                    legend += "</span></li>";
-                })
-                legend += "</ul>";
+    function setRadarChart(radarChartData) {
+        // legend for Chart
+        var legend = "<ul class=\"radarlegend\" style=\"list-style-type:none;\">";
+        radarChartData.datasets.forEach(function (dataset) {
+            legend += "<li><div style=\"background-color:" + dataset.strokeColor + ";height:0.5em;width:0.5em;float:left;margin-top:0.5em;margin-right:0.5em;\"></div><span style='font-family:Verdana;font-size: 12px;'>";
+            if (dataset.label) {
+                legend += dataset.label
+            }
+            legend += "</span></li>";
+        })
+        legend += "</ul>";
 
-                var data = '<svg xmlns="http://www.w3.org/2000/svg">' +
-                        '<foreignObject width="100%" height="100%">' +
-                        '<div xmlns="http://www.w3.org/1999/xhtml" style="font-size:20px">' +
-                        legend +
-                        '</div>' +
-                        '</foreignObject>' +
-                        '</svg>';
+        var data = '<svg xmlns="http://www.w3.org/2000/svg">' +
+                '<foreignObject width="100%" height="100%">' +
+                '<div xmlns="http://www.w3.org/1999/xhtml" style="font-size:20px">' +
+                legend +
+                '</div>' +
+                '</foreignObject>' +
+                '</svg>';
 
-                var DOMURL = window.URL || window.webkitURL || window;
-                var img = new Image();
-                var svg = new Blob([data], {
-                    type: 'image/svg+xml;charset=utf-8'
-                });
-                var url = DOMURL.createObjectURL(svg);
+        var DOMURL = window.URL || window.webkitURL || window;
+        var img = new Image();
+        var svg = new Blob([data], {
+            type: 'image/svg+xml;charset=utf-8'
+        });
+        var url = DOMURL.createObjectURL(svg);
 
-                img.onload = function () {
-                    DOMURL.revokeObjectURL(url);
+        img.onload = function () {
+            DOMURL.revokeObjectURL(url);
 
-                    Chart.types.Radar.extend({
-                        name: "RadarAlt",
-                        draw: function () {
-                            this.scale.yCenter = this.chart.width / 2;
-                            Chart.types.Radar.prototype.draw.apply(this, arguments);
-                            this.chart.ctx.drawImage(img, 0, this.chart.width);
-                        }
-                    });
+            Chart.types.Radar.extend({
+                name: "RadarAlt",
+                draw: function () {
+                    this.scale.yCenter = this.chart.width / 2;
+                    Chart.types.Radar.prototype.draw.apply(this, arguments);
+                    this.chart.ctx.drawImage(img, 0, this.chart.width);
+                }
+            });
 
                     // create chart
                     /* can't use getContext on jQuery object. Must find undelying DOM object */
@@ -99,24 +98,49 @@ console.log('inside');
                      .prop({width: 300,height: 300});
                      $(".radar-analytics").append(chartcanvas);*/
                     //var ctx = $(chartcanvas)[0].getContext('2d');
-                    var ctx = document.getElementById("radaranalytics").getContext('2d');
-                    var radar = new Chart(ctx).RadarAlt(radarChartData, {
-                        responsive: true
-                    });
-                }
-                img.src = url;
-            }
+            var ctx = document.getElementById("radaranalytics").getContext('2d');
+            var radar = new Chart(ctx).RadarAlt(radarChartData, {
+                responsive: true,
+                scaleShowLabels : true
             });
+        }
+        img.src = url;
 
+        $('#exportCanvas').on('click', function(){
+            downloadCanvas(this, 'radaranalytics', 'xxx.png')
+        });
+
+
+//Export the image
+        $('#send2base46').on('submit', function(event){
+            event.preventDefault();
+            var canv = document.getElementById("radaranalytics");
+            base64 = canv.toDataURL("image/jpeg", 1.0);
+            blob = canv.toBlob();
+
+        });
+    }
+                /**
+                 * This is the function that will take care of image extracting and
+                 * setting proper filename for the download.
+                 * IMPORTANT: Call it from within a onclick event.
+                 */
+                function downloadCanvas(link, canvasId, filename) {
+                    link.href = document.getElementById(canvasId).toDataURL();
+                    link.download = filename;
+                }
+
+
+
+
+
+
+});
         </script>
     </div>
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
-    <script type="text/javascript">
-        $(document).ready(function() {
 
-        });
-    </script>
 {% endblock %}
