wip widget display & config

--- a/Resources/public/css/chartjs.css
+++ b/Resources/public/css/chartjs.css
@@ -1,1 +1,3 @@
-.radaranalytics {width:450px !important;height: 450px !important}
+.radarstat{display: block}
+.exportgraph{display: none}
+.containerradar{width: 100%;position:relative}
