--- a/Resources/views/Widget/statWidgetConfigure.html.twig
+++ b/Resources/views/Widget/statWidgetConfigure.html.twig
@@ -7,29 +7,25 @@
       novalidate
         >
     <div class="panel-body">
-        <div id="pick-user-for-stats">
-            <i class="fa fa-user-plus pointer-hand pull-right"
-               id="pick-user-for-stats-btn"
-               data-toggle="tooltip"
-               data-placement="left"
-               title="{{ 'pick_user_for_stat'|trans({}, 'platform') }}"
-                    ></i>
-        </div>
 
         <table class="table">
-            <tr>
-                <td class="isel_label">{{ form_label(form.userlist) }}</td>
+            <tr id="pick-user-for-stats">
+                <td class="isel_label">{{ form.userlist.vars.label }}</td>
                 <td class="isel_widget">{{ form_widget(form.userlist) }}</td>
-                <td class="isel_widget">{{ form_errors(form.userlist) }}</td>
+                <td class="isel_widget">
+                    <i class="fa fa-user-plus pointer-hand pull-right"
+                       id="pick-user-for-stats-btn"
+                       data-placement="left"
+                       title="{{ 'pick_user_for_stat'|trans({}, 'resource') }}"></i>
+                </td>
             </tr>
             <tr>
-                <td class="isel_label">{{ form_label(form.resourcelist) }}</td>
+                <td class="isel_label">{{ form.resourcelist.vars.label }}</td>
                 <td class="isel_widget">{{ form_widget(form.resourcelist) }}</td>
                 <td class="isel_widget">{{ form_errors(form.resourcelist) }}</td>
             </tr>
         </table>
 
-      {#  {{ form_widget(form) | replace('/id=[^"]*"', '') | raw }} #}
     </div>
     <div class="panel-footer">
         <button type="submit" class="btn btn-primary">{{ 'ok'|trans({}, 'platform') }}</button>
@@ -41,42 +37,36 @@
 
 <script type="text/javascript">
     $(document).ready(function() {
+        var allUsersInWS = '';
+
+        $.ajax({
+            url: Routing.generate('cpasimusante_get_user_in_ws', {}),
+            type: 'GET',
+            success: function (datas) {
+                allUsersInWS = (datas !== null) ? datas.join(",") : '';
+            }
+        });
+
+        $('#pick-user-for-stats').on('click', '#pick-user-for-stats-btn', function () {
+            var userPicker = new UserPicker();
+            var settings = {
+                multiple: true,
+                picker_name: 'contacts_picker',
+                picker_title: Translator.trans('select_users_to_add_to_graph', {},'resource'),
+                whitelist: allUsersInWS
+            };
+            userPicker.configure(settings, addUsersToGraph);
+            userPicker.open();
+        });
+        addUsersToGraph = function(userIds) {
+            if (userIds !== null) {
+                $('#cpasimusante_exoverridebundle_exoverridestatconfig_userlist').val(userIds);
+            }
+        };
 /*
         var allContactIdsTxt = '' + $('#contacts-datas-box').data('contacts-id');
         var allContactIds = allContactIdsTxt !== '' ?
                 allContactIdsTxt.split(',') :
-                $('#pick-user-for-stats').on('click', '#pick-user-for-stats-btn', function () {
-                    var userPicker = new UserPicker();
-                    var settings = {
-                        multiple: true,
-                        picker_name: 'contacts_picker',
-                        picker_title: Translator.trans(
-                                'select_users_to_add_to_graph',
-                                {},
-                                'platform'
-                        ),
-                        blacklist: allContactIds
-                    };
-                    userPicker.configure(settings, addContacts);
-                    userPicker.open();
-                });
-        var addContacts = function (userIds) {
-
-            if (userIds !== null) {
-                var parameters = {};
-                parameters.userIds = userIds;
-                var route = Routing.generate('claro_contacts_add');
-                route += '?' + $.param(parameters);
-
-                $.ajax({
-                    url: route,
-                    type: 'GET',
-                    success: function () {
-                        window.location.reload();
-                    }
-                });
-            }
-        };
 */
     });
 </script>
