--- a/Resources/views/Chartjs/show.html.twig
+++ b/Resources/views/Chartjs/show.html.twig
@@ -1,7 +1,10 @@
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" media="screen" href="{{ asset('bundles/cpasimusanteexoverride/css/chartjs.css') }}">
 {% endblock %}
-<p><a class="btn btn-primary btn-sm showcsv">Afficher le graphique</a> <a class="btn btn-primary btn-sm exportgraph">Enregistrer l'image</a></p>
-<span id="userresource" data-user="{{ userlist }}" data-resource="{{ resourcelist }}"></span>
-<div id="containerradar"><canvas id="radaranalytics" class="radarstat" height="350" width="300"></canvas></div>
-{#<iframe class="activity-iframe" height="500" src="{{ path('ujm_paper_show_radar', {}) }}"></iframe>#}
+<div id="radarmessage"></div>
+<div id="radarcontent">
+    <p><a class="btn btn-primary btn-sm showcsv">Afficher le graphique</a> <a class="btn btn-primary btn-sm exportgraph">Enregistrer l'image</a></p>
+    <span id="userresource" data-user="{{ userlist }}" data-resource="{{ resourcelist }}"></span>
+    <div id="containerradar"><canvas id="radaranalytics" class="radarstat" height="350" width="300"></canvas></div>
+    {#<iframe class="activity-iframe" height="500" src="{{ path('ujm_paper_show_radar', {}) }}"></iframe>#}
+</div>
