wip improve widget display

--- a/Resources/public/css/exoverride.css
+++ b/Resources/public/css/exoverride.css
@@ -1,1 +1,5 @@
 .radarcontent{display: none}
+.radarstat{display: block}
+.exportgraph{display: none}
+.containerradar{width: 100%;position:relative}
+#containerradardata{}
