--- a/Resources/views/Chartjs/show.html.twig
+++ b/Resources/views/Chartjs/show.html.twig
@@ -1,23 +1,22 @@
-<div id="radarmessage"></div>
-<div id="radarcontent" data-widget-instance="{{ widgetInstance.getId() }}">
+<div class="radarmessage"></div>
+<div class="radarcontent" id="radarcontent{{ widgetInstance.getId() }}" data-widget-instance="{{ widgetInstance.getId() }}">
     <p>
-        <a class="btn btn-primary btn-sm showcsv">Afficher le graphique</a>
-        <a class="btn btn-primary btn-sm exportgraph">Enregistrer l'image</a>
         {% if resourcelist != '' %}
-        <a id="exo-statistics-results"
-           class="btn btn-primary btn-sm">
+        <a class="btn btn-primary btn-sm showcsv" id="showcsv{{ widgetInstance.getId() }}">Afficher le graphique</a>
+        <a class="btn btn-primary btn-sm exportgraph" id="exportgraph{{ widgetInstance.getId() }}">Enregistrer l'image</a>
+        <a class="btn btn-primary btn-sm exo-statistics-results" id="exo-statistics-results{{ widgetInstance.getId() }}">
             {{ 'show_result_stats_html' | trans({}, 'messages') }}
         </a>
-        {% endif %}
         <a href="{{ path('ujm_paper_export_all_results_cvs', {resourcedata: resourcelist}) }}"
-           class="btn btn-primary btn-sm">
+           class="btn btn-primary btn-sm" id="export_all_results_cvs{{ widgetInstance.getId() }}">
             {{ 'export_results_stats_csv' | trans({}, 'messages') }}
         </a>
+        {% endif %}
     </p>
 
-    <span id="userresource" data-user="{{ userlist }}" data-resource="{{ resourcelist }}"></span>
-    <div id="containerradardata"></div>
-    <div id="containerradar"><canvas id="radaranalytics" class="radarstat" height="350" width="300"></canvas></div>
+    <span class="userresource" id="userresource{{ widgetInstance.getId() }}" data-user="{{ userlist }}" data-resource="{{ resourcelist }}"></span>
+    <div class="containerradardata" id="containerradardata{{ widgetInstance.getId() }}"></div>
+    <div class="containerradar" id="containerradar{{ widgetInstance.getId() }}"><canvas id="radaranalytics{{ widgetInstance.getId() }}" class="radarstat" height="350" width="300"></canvas></div>
     {#<iframe class="activity-iframe" height="500" src="{{ path('ujm_paper_show_radar', {}) }}"></iframe>#}
 </div>
 {# has to be after this html ! #}
