Wip on fixtures

--- a/Resources/views/Paper/index.html.twig
+++ b/Resources/views/Paper/index.html.twig
@@ -42,6 +42,8 @@
                class="btn btn-primary">
                 {{ 'export_csv_results' | trans }}
             </a>
+            <a href="{{ path('exoverride_fixtures', { }) }}" class="btn btn-primary">Fixtures</a>
+
             {#
                         <a href="{{ path('ujm_paper_export_complete_results', { 'exerciseId': exoID }) }}"
                            class="btn btn-primary">
